# quote

./: .gitignore  Cargo.toml  README.md  prod_all.sql
docs/: cli.md  config.md  http-api.md  tui.md
sql/postgres/: 001_init.sql  002_data.sql
sql/sqlite/: 001_init.sql  002_data.sql
src/: lib.rs
src/adapter/: cli.rs
src/adapter/cli/: confirm.rs  format.rs  mod.rs  output.rs
src/adapter/cli/handlers/: create.rs  delete.rs  download.rs  get.rs  list.rs  mod.rs  update.rs
src/adapter/http/: dto.rs  error.rs  hello.rs  mod.rs  quote.rs  router.rs
src/adapter/tui/: app.rs  message.rs  mod.rs  program.rs  runtime.rs  state.rs  update.rs
src/adapter/tui/assets/: help_en.txt  help_zh.txt
src/adapter/tui/components/: controller.rs  mod.rs  root.rs
src/adapter/tui/ui/: common.rs  detail.rs  help.rs  jump.rs  layout.rs  list.rs  mod.rs
src/app/: app_error.rs  app_state.rs  mod.rs
src/application/: config.rs  error.rs  mod.rs  state.rs
src/application/quote/: mod.rs  model.rs  port.rs
src/application/service/: mod.rs
src/application/service/quote/: count_quote.rs  create_quote.rs  delete_quote.rs  get_quote_by_id.rs  get_random_quote.rs  list_quote.rs  mod.rs  partial_delete_quote.rs  update_quote.rs
src/application/service/storage/: delete_many.rs  delete_object.rs  mod.rs  upload_many_with_rollback.rs  upload_object.rs
src/application/service/template/: build_template_filter.rs  (+3 more)
src/application/storage/: model.rs  port.rs
src/dict/: entity.rs  mod.rs  port.rs
src/dict/usecase/: get_type_by_id.rs  get_type_by_key.rs  list_type.rs  mod.rs
src/domain/: error.rs  mod.rs
src/domain/entity/: mod.rs  quote.rs
src/domain/quote/: draft.rs  dto.rs  entity.rs  filter.rs  mod.rs  patch.rs  tests.rs
src/domain/value/: lang.rs  mod.rs  object_key.rs
src/infra/: mod.rs
src/infra/file/: dict_repo.rs  mod.rs  quote_repo.rs  storage_repo.rs
src/infra/minio/: minio.rs  mod.rs  storage_repo.rs
src/infra/none/: mod.rs  storage_repo.rs
src/infra/none_storage/: storage_repo.rs
src/infra/pgsql/: dict_repo.rs  mod.rs  pgsql_json_condition.rs  quote_repo.rs
src/infra/postgres/: error_mapper.rs  init_quote.sql  mod.rs  quote_filter_sql.rs  quote_mapper.rs  quote_repo.rs
src/infra/sqlite/: error_mapper.rs  quote_filter_sql.rs  quote_mapper.rs  quote_repo.rs
src/quote/: entity.rs  mod.rs  port.rs
src/quote/usecase/: add_audio_by_id.rs  add_image_by_id.rs  add_markdown_by_id.rs  add_text_by_id.rs  add_text_file_by_id.rs  create.rs  get_by_id.rs  get_quote_by_id.rs  get_random.rs  list.rs  mod.rs  random_get_by_content_key.rs  random_get_quote_by_content_key.rs
