[package]
name = "azvs_quote"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "quote"
path = "src/bin/cli.rs"

[[bin]]
name = "quote-http"
path = "src/bin/http.rs"

[dependencies]

# 简化自定义错误类型的定义
thiserror = "2.0.18"
# 简化错误处理的库
anyhow = "1.0.100"
# Serialize与Deserialize
serde = { version = "1.0.228", features = ["derive"] }
# JSON的Serialize与Deserialize
serde_json = "1.0.149"
# 允许在 trait 中定义异步方法
async-trait = "0.1.89"
# 跨平台获取标准config路径
directories = "6.0.0"
# 外部配置 config
config = "0.15.19"
# 用于单元测试, 为 trait 和结构体自动生成 mock 对象
mockall = "0.14.0"
#  异步运行时，允许`async fn main()`
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }



# 数据库连接
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }

# 命令行 CLI
clap = { version = "4.5.57", features = ["derive"] }

# AWS S3 SDK
aws-config = "1.8.13"
aws-sdk-s3 = "1.122.0"
log = "0.4.29"